use relative paths again

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <div id="video-preview" style="display:block;width:425px;height:300px;">'error loading video'</div>
 
   <script type='text/javascript'>
-    flowplayer('video-preview', { src: 'https://gist.githubusercontent.com/andyborn/9cf6df0d752e1014b1bb/raw/d66222041d01d6a494621d6d9ea986cbe4861979/flowplayer.js', wmode: 'opaque'}, {
+    flowplayer('video-preview', { src: './flowplayer.js', wmode: 'opaque'}, {
       "playlist": [
         './example.mp4'
       ],
@@ -18,7 +18,7 @@
           "autoHide": "never"
         },
         "ova": {
-          "url": "https://gist.githubusercontent.com/andyborn/1c479a346fe9e9e85392/raw/29a4a3bd65e5ee6d2169473b92c9b91b49ffda19/ova.swf",
+          "url": "./ova.swf",
           "autoPlay": true,
           "ads": {
             "companions": {
