use relative paths again

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <title>Video Preview!</title>
   <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
-  <script type="text/javascript" src="https://gist.githubusercontent.com/andyborn/9cf6df0d752e1014b1bb/raw/d66222041d01d6a494621d6d9ea986cbe4861979/flowplayer.js"></script>
+  <script type="text/javascript" src="./flowplayer.js"></script>
 </head>
 <body>
   <div id="video-preview" style="display:block;width:425px;height:300px;">'error loading video'</div>
